<resources>
    <string name="app_name">Santander Dev Week</string>
    <string name="nome_principal">Olá, Filipe</string>
    <string name="agencia" translatable="false">Ag 0236</string>
    <string name="conta" translatable="false">Cc 1005623-3</string>
    <string name="saldo">Saldo Disponível</string>
    <string name="disponivel" translatable="false">R$ 1.500,00</string>
    <string name="disponivel_saldo">Limite + Saldo R$ 2.500,00</string>
    <string name="extrato">Ver Extrato</string>
    <string name="pagar">Pagar</string>
    <string name="tranferir">Transferir</string>
    <string name="recarga">Recarga</string>
    <string name="cartao_final">Cartão Final</string>
    <string name="cartao_final_value" translatable="false">0038</string>

</resources>