<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_principal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agencia"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@+id/tv_usuario"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tv_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_agencia"
        app:layout_constraintTop_toTopOf="@+id/tv_agencia"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agencia">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/icone_saldo"
            android:layout_width="45dp"
            android:layout_height="39dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_cifrao_com_setas_giratorias"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saldo_disponivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/saldo"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/seta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_expand_less_black_24dp" />

        <TextView
            android:id="@+id/tv_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="55dp"
            android:text="@string/disponivel"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_saldo_limite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/disponivel_saldo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="135dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/extrato"
            android:textColor="@color/redSecundary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:src="@drawable/ic_credit_card_black_24dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pagar"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:textStyle="bold"/>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:src="@drawable/ic_credit_card_black_24dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pagar"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:textStyle="bold"/>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transferir"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/mcv_pagar"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:src="@drawable/ic_payments_black_24dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tranferir"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:textStyle="bold"/>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarga"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/mcv_transferir"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:src="@drawable/ic_phone_iphone_black_24dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recarga"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:textStyle="bold"/>


    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/final_cartao"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:background="@color/redPrimary"
        android:paddingLeft="300dp"
        android:src="@drawable/ic_expand_more_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcv_transferir"
        app:layout_constraintVertical_bias="0.235"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_final"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="@id/final_cartao"
        app:layout_constraintTop_toTopOf="@id/final_cartao"
        app:layout_constraintBottom_toBottomOf="@id/final_cartao"/>

    <TextView
        android:id="@+id/cartao_final_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_final_value"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/cartao_final"
        app:layout_constraintTop_toTopOf="@id/cartao_final"/>






</androidx.constraintlayout.widget.ConstraintLayout>